removing broken cell from solution?

--- a/migration_challenge_keras_image/Instructions.ipynb
+++ b/migration_challenge_keras_image/Instructions.ipynb
@@ -268,17 +268,17 @@
     "\n",
     "# Squeeze out any unneeded dimensions from \"data\", then put back the batch and channel dimensions\n",
     "# we want (assuming batch dim is first and channel dim is last):\n",
-    "print(f\"Raw data shape {np.array(data).shape}\")\n",
-    "reqdata = np.expand_dims(np.expand_dims(np.squeeze(data), 2), 0)\n",
-    "print(f\"Request data shape {reqdata.shape}\")\n",
+    "#print(f\"Raw data shape {np.array(data).shape}\")\n",
+    "#reqdata = np.expand_dims(np.expand_dims(np.squeeze(data), 2), 0)\n",
+    "#print(f\"Request data shape {reqdata.shape}\")\n",
     "\n",
     "# TODO: Call the predictor with reqdata\n",
-    "result = predictor.predict(reqdata)\n",
+    "#result = predictor.predict(reqdata)\n",
     "\n",
     "# TODO: What structure is the response? How do we interpret it?\n",
-    "print(result)\n",
-    "chosen = np.argmax(result[\"predictions\"][0])\n",
-    "print(f\"Predicted digit {chosen} with confidence {result['predictions'][0][chosen]:.2%}\")\n"
+    "#print(result)\n",
+    "#chosen = np.argmax(result[\"predictions\"][0])\n",
+    "#print(f\"Predicted digit {chosen} with confidence {result['predictions'][0][chosen]:.2%}\")\n"
    ]
   },
   {
